# steadytext

./: .gitignore  .mcp.json  .pytest-runtimes  .testmondata  404.html  CHANGELOG.md  CHANGELOG_AUTOMATION.md  CLAUDE.md  CNAME  CONTRIBUTING.md  GITHUB_ACTIONS_PGTAP_SETUP.md  INSTALL_PACKAGES.md  LICENSE-GEMMA.txt  PGTAP_CI_IMPLEMENTATION_STEPS.md  README.md  README_OLD_FRENCH.md  build-packages.sh  example-pgtap-workflow.yml  index.html  mkdocs.yml  pyproject.toml  sitemap.xml  test_cache_logic.py  test_daemon_cache_direct.py  test_daemon_cache_fix.py  test_embedding_dim.py  test_fallback_gen.py  test_gen.py  test_summarize_final.sql  test_summarize_simple.sql  update-changelog-advanced.yml  update-changelog.yml
.claude/: settings.json  settings.local.json
.devcontainer/: CI.md  devcontainer.json  docker-compose.yml
api/: index.html
architecture/: index.html
benchmarks/: index.html  run_all_benchmarks.py  run_mock_benchmarks.py  test_benchmarks.py  test_framework.py
cache-backends/: index.html
concepts/: index.html
configuration-reference/: index.html
contributing/: index.html
deployment/: index.html
docs/: README.md  api.md  model-switching.md  unsafe-mode.md  version_history.md
eos-string-implementation/: index.html
examples/: basic_usage.py  cli_tools.py  content_generation.py  daemon_demo.py  index.html  index_management.py  testing_with_ai.py
faq/: index.html
integrations/: index.html
migration-guide/: index.html
model-switching/: index.html
mojo-max/: index.html
packaging/: build-deb.sh  build-rpm.sh  pgxn-upload.sh  test-builds.sh
pg_steadytext/: .Dockerfile.swp  AIDEV-NOTES.md  CHANGELOG.md  CLAUDE.md  Dockerfile  INSTALL.md  META.json  Makefile  PGTAP_CI_SETUP.md  README.md  TODO.md  index.html  install.sh  pg_steadytext.control  pgtap-workflow.yml  run_pgtap_tests.sh  run_tests.sh  setup.py  test_unsafe_mode_summarize.sql
postgresql-extension/: index.html
postgresql-extension-advanced/: index.html
postgresql-extension-ai/: index.html
postgresql-extension-async/: index.html
postgresql-extension-prompt-registry/: index.html
postgresql-extension-reference/: index.html
postgresql-extension-reranking/: index.html
postgresql-extension-structured/: index.html
postgresql-extension-troubleshooting/: index.html
quick-start/: index.html
reranking/: index.html
search/: search_index.json
shell-integration/: index.html
steadytext/: __init__.py  cache_manager.py  config.py  disk_backed_frecency_cache.py  pyproject.toml  sqlite_cache_backend.py  test_gen.py  utils.py
structured-generation/: index.html
tests/: test_cli.py  test_concurrent_cache.py  test_config.py  test_custom_seed.py  test_daemon.py  test_daemon_cache_integration.py  test_defaults_integration.py  test_disk_backed_frecency_cache.py  test_embedding_env_overrides.py  test_generate_iter.py  test_grammar.py  test_mini_models.py  test_openrouter_auth_integration.py  (+22 more)
(+161 files in other folders)
