[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "steadytext"
version = "0.1.0"
description = "Deterministic text generation and embedding with zero configuration"
readme = "README.md"
authors = [
  { name="SteadyText Community", email="steadytext@example.com" },
]
license = { file="LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "llama-cpp-python==0.2.90",
    "numpy>=1.21.0,<2.0.0",
    "huggingface-hub>=0.20.0",
    "requests",
    "tqdm>=4.60.0",
    "sentence-transformers>=2.2.0"
]

[project.urls]
"Homepage" = "https://github.com/steadytext/steadytext"
"Bug Tracker" = "https://github.com/steadytext/steadytext/issues"
